; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/rfkill/extr_core.c_rfkill_pause_polling.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/rfkill/extr_core.c_rfkill_pause_polling.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rfkill = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rfkill_pause_polling(%struct.rfkill* %0) #0 {
  %2 = alloca %struct.rfkill*, align 8
  store %struct.rfkill* %0, %struct.rfkill** %2, align 8
  %3 = load %struct.rfkill*, %struct.rfkill** %2, align 8
  %4 = icmp ne %struct.rfkill* %3, null
  %5 = xor i1 %4, true
  %6 = zext i1 %5 to i32
  %7 = call i32 @BUG_ON(i32 %6)
  %8 = load %struct.rfkill*, %struct.rfkill** %2, align 8
  %9 = getelementptr inbounds %struct.rfkill, %struct.rfkill* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %1
  br label %19

15:                                               ; preds = %1
  %16 = load %struct.rfkill*, %struct.rfkill** %2, align 8
  %17 = getelementptr inbounds %struct.rfkill, %struct.rfkill* %16, i32 0, i32 0
  %18 = call i32 @cancel_delayed_work_sync(i32* %17)
  br label %19

19:                                               ; preds = %15, %14
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @cancel_delayed_work_sync(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
